forcepad->colorpicker via websockets

--- a/colorpicker/index.html
+++ b/colorpicker/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="js/colorpicker.js"></script>
     <script type="text/javascript" src="js/eye.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
+    <script type="text/javascript" src="js/underscore.js"></script>
     <script type="text/javascript" src="js/layout.js?ver=1.0.2"></script>
 </head>
 <body>
