--- a/server/test_websocket_client/websocket_client.html
+++ b/server/test_websocket_client/websocket_client.html
@@ -2,17 +2,25 @@
 <head>
 <script type="text/javascript" src="js/jquery-1.8.2.js"></script>
 <script type="text/javascript" src="js/paper.js"></script>
+<script type="text/javascript" src="js/fingergraph.js"></script>
 
 <script>
 $(document).ready(function() {
 
 var ws = new WebSocket("ws://localhost:9002/");
-ws.onopen = function() {
-  ws.send("Hello Mr. Server!");
+ws.onopen = function()
+{
+	ws.send("Hello Mr. Server!");
+	canvas_setup();
+	p1_draw();
 };
+
 ws.onmessage = function (e) {
 	$('#ta1').val( $('#ta1').val() + "\n" + e.data);
+	parse_json($('#ta1').val());
+	draw_on_input();
 };
+
 ws.onclose = function() { };
 
 });
