--- a/chrome-app/main.html
+++ b/chrome-app/main.html
@@ -1,15 +1,22 @@
 <!doctype html>
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>TartanTouch Demo</title>
     <link href="styles.css" media="screen" rel="stylesheet" type="text/css" />
     <!-- JavaScript and HTML must be in separate files for security. -->
     <script src="lib/jquery.js"></script>
+    <script src="lib/jquery-ui.js"></script>
     <script src="lib/underscore.js"></script>
     <script src="lib/paperjs/lib/paper.js"></script>
-    <script src="app.js"></script>
+    <script src="drawing.js"></script>
   </head>
   <body>
-    <div id="msg-list"><b>Messages</b></div>
+
+    <div class="workspace">
+        <canvas id="mainCanvas" resize></canvas>
+    </div>
+    <div class="wnd" id="msg-list"><b>Touch values</b></div>
+    <div class="wnd" id="touchviz"><b>Touch Viz</b>
+      <canvas id="touchVizCanvas"></canvas> </div>
   </body>
 </html>
