--- a/chrome-app/main.html
+++ b/chrome-app/main.html
@@ -31,7 +31,7 @@
     <div class="workspace">
         <canvas id="mainCanvas" resize></canvas>
     </div>
-    <div class="wnd" id="msg-list"><b>Touch values</b></div>
+    <div class="wnd" id="msg-list"><b>Touch values</b><div class="msg"></div></div>
     <div class="wnd" id="touchviz"><b>Touch Viz</b><br>
       <canvas id="touchVizCanvas"></canvas> </div>
   </body>
