--- a/chrome-app/main.html
+++ b/chrome-app/main.html
@@ -20,6 +20,7 @@
       <li class="divider-vertical"></li>
       <li class="active" id="linkModeDraw"><a href="javascript:setAppMode('draw')">draw</a></li>
       <li id="linkModeSelect"><a href="javascript:setAppMode('select')">select</a></li>
+      <li id="linkModeSelect"><a href="javascript:clearDrawing()">clear</a></li>
     </ul>
     <ul class="nav pull-right">
       <li><a href="javascript:toggleVisibility('msg-list')">data</a></li>
