layer menu & selection working

--- a/chrome-app/main.html
+++ b/chrome-app/main.html
@@ -34,6 +34,16 @@
     </div>
     <div class="wnd" id="msg-list"><b>Touch values</b><div class="msg"></div></div>
     <div class="wnd" id="touchviz"><b>Touch Viz</b><br>
-      <canvas id="touchVizCanvas"></canvas> </div>
+      <canvas id="touchVizCanvas"></canvas> 
+    </div>
+    <div id="layerlist">
+      <div class="vIndicator"></div>
+      <ul class="layers">
+        <li>layer 1</li>
+        <li class="active">layer 2</li>
+        <li>layer 3</li>
+        <li>layer 4</li>
+      </ul>
+    </div>
   </body>
 </html>
