--- a/chrome-app/main.html
+++ b/chrome-app/main.html
@@ -10,7 +10,9 @@
     <script src="lib/underscore.js"></script>
     <script src="lib/paperjs/lib/paper.js"></script>
     <script src="lib/bootstrap.js"></script>
+    <script src="../raunaq-viz/fingergraph_2.js"></script>
     <script src="drawing.js"></script>
+
   </head>
   <body>
     <div class="navbar navbar-invaerse">
