--- a/chrome-app/main.html
+++ b/chrome-app/main.html
@@ -10,6 +10,7 @@
     <script src="lib/underscore.js"></script>
     <script src="lib/paperjs/lib/paper.js"></script>
     <script src="lib/bootstrap.js"></script>
+    <script src="lib/jscolor/jscolor.js"></script>
     <script src="../raunaq-viz/fingergraph_2.js"></script>
     <script src="drawing.js"></script>
 
@@ -36,7 +37,7 @@
     </div>
     <div class="wnd" id="msg-list"><b>Touch values</b><div class="msg"></div></div>
     <div class="wnd" id="touchviz"><b>Touch Viz</b><br>
-      <canvas id="touchVizCanvas"></canvas> 
+      <canvas id="c1" width="500" height="500"></canvas>
     </div>
     <div id="layerlist">
       <div class="vIndicator"></div>
@@ -47,5 +48,7 @@
         <li>layer 4</li>
       </ul>
     </div>
+    <div class="wnd" id="color-window"><b>Set Color</b><br><input class="color {pickerOnfocus:false, pickerMode:'HSV'}" value="66ff00" id="colorpicker"></div>
+    
   </body>
 </html>
